ProjetoCOMP/src/JSON.java
import java.io.BufferedReader;
import java.io.ByteArrayInputStream;
import java.io.FileReader;
import java.io.IOException;
import java.io.InputStream;
import java.util.ArrayList;
import java.util.Scanner;

/* Generated By:JJTree&JavaCC: Do not edit this line. JSON.java */
public class JSON/*@bgen(jjtree)*/implements JSONTreeConstants, JSONConstants {static /*@bgen(jjtree)*/

	boolean sintaticError = false;
static ArrayList<String> input = new ArrayList<String>();

protected static JJTJSONState jjtree = new JJTJSONState();public static void main(String args[]) throws ParseException, IOException {

	int op = 0;

	while(op!=3){
		System.out.println("Deseja:");
		System.out.println("1-Inserir código");
		System.out.println("2-Ler de um ficheiro de texto");
		System.out.println("3-Sair do programa");

		Scanner inn = new Scanner(System.in);
		op = inn.nextInt();
		
		if(op==1){
			System.out.println("Insira o código desejado:");
			
			JSON parser = new JSON(System.in);
			SimpleNode root = parser.Expression();
			root.dump("");
		}

		else if(op==2){
			System.out.println("Insira o nome do ficheiro:");

			Scanner innn = new Scanner(System.in);
			String filename = innn.next();
			
			JSON parser = new JSON(readFile(filename));
			SimpleNode root = parser.Expression();
			root.dump("");
		}
	}
	
	System.out.println("O Programa terminou.");
}

static InputStream readFile(String fileName) throws IOException {
    BufferedReader br = new BufferedReader(new FileReader(fileName));
    try {
        StringBuilder sb = new StringBuilder();
        String line = br.readLine();

        while (line != null) {
            sb.append(line);
            sb.append("\n");
            line = br.readLine();
        }
        
        InputStream stream = new ByteArrayInputStream(sb.toString().getBytes());
        return stream;
    } finally {
        br.close();
    }
}

final public SimpleNode Expression() throws ParseException {
	/*@bgen(jjtree) Expression */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPRESSION);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		jj_consume_token(OPENB);
		Expr1();
		Expr2();
		jj_consume_token(CLOSEB);
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
	//throw new Error("Missing return statement in function");

	if(sintaticError)
		System.out.println("Input lido com erros sintáticos.\n");

	else
		System.out.println("Input lido sem erros sintáticos.\n");

	for(int i = 0; i < input.size(); i++){
		System.out.print(input.get(i));
	}

	System.out.println("\n");

	return jjtn000;
}

static final public void Expr1() throws ParseException {
	/*@bgen(jjtree) Expr1 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR1);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		jj_consume_token(NODES);
		jj_consume_token(COLON);
		jj_consume_token(OPENA);
		Expr3();
		jj_consume_token(CLOSEA);
		jj_consume_token(COMMA);
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr2() throws ParseException {
	/*@bgen(jjtree) Expr2 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR2);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		jj_consume_token(LINKS);
		jj_consume_token(COLON);
		jj_consume_token(OPENA);
		Expr4();
		jj_consume_token(CLOSEA);
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr3() throws ParseException {
	/*@bgen(jjtree) Expr3 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR3);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		Expr5();
		Expr7();
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr4() throws ParseException {
	/*@bgen(jjtree) Expr4 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR4);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		Expr6();
		Expr8();
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr5() throws ParseException {
	/*@bgen(jjtree) Expr5 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR5);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		jj_consume_token(OPENB);
		jj_consume_token(NAME);
		jj_consume_token(COLON);
		jj_consume_token(STRING);
		jj_consume_token(COMMA);
		jj_consume_token(GROUP);
		jj_consume_token(COLON);
		jj_consume_token(INTEGER);
		jj_consume_token(CLOSEB);
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr6() throws ParseException {
	/*@bgen(jjtree) Expr6 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR6);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		jj_consume_token(OPENB);
		jj_consume_token(SOURCE);
		jj_consume_token(COLON);
		jj_consume_token(INTEGER);
		jj_consume_token(COMMA);
		jj_consume_token(TARGET);
		jj_consume_token(COLON);
		jj_consume_token(INTEGER);
		jj_consume_token(COMMA);
		jj_consume_token(VALUE);
		jj_consume_token(COLON);
		jj_consume_token(INTEGER);
		jj_consume_token(CLOSEB);
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr7() throws ParseException {
	/*@bgen(jjtree) Expr7 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR7);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
		case COMMA:
			jj_consume_token(COMMA);
			Expr5();
			Expr7();
			break;
		default:
			jj_la1[0] = jj_gen;
			;
		}
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static final public void Expr8() throws ParseException {
	/*@bgen(jjtree) Expr8 */
	SimpleNode jjtn000 = new SimpleNode(JJTEXPR8);
	boolean jjtc000 = true;
	jjtree.openNodeScope(jjtn000);
	try {
		switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
		case COMMA:
			jj_consume_token(COMMA);
			Expr6();
			Expr8();
			break;
		default:
			jj_la1[1] = jj_gen;
			;
		}
	} catch (Throwable jjte000) {
		if (jjtc000) {
			jjtree.clearNodeScope(jjtn000);
			jjtc000 = false;
		} else {
			jjtree.popNode();
		}
		if (jjte000 instanceof RuntimeException) {
			{if (true) throw (RuntimeException)jjte000;}
		}
		if (jjte000 instanceof ParseException) {
			{if (true) throw (ParseException)jjte000;}
		}
		{if (true) throw (Error)jjte000;}
	} finally {
		if (jjtc000) {
			jjtree.closeNodeScope(jjtn000, true);
		}
	}
}

static private boolean jj_initialized_once = false;
/** Generated Token Manager. */
static public JSONTokenManager token_source;
static SimpleCharStream jj_input_stream;
/** Current token. */
static public Token token;
/** Next token. */
static public Token jj_nt;
static private int jj_ntk;
static private int jj_gen;
static final private int[] jj_la1 = new int[2];
static private int[] jj_la1_0;
static {
	jj_la1_init_0();
}
private static void jj_la1_init_0() {
	jj_la1_0 = new int[] {0x400,0x400,};
}

/** Constructor with InputStream. */
public JSON(java.io.InputStream stream) {
	this(stream, null);
}
/** Constructor with InputStream and supplied encoding */
public JSON(java.io.InputStream stream, String encoding) {
	if (jj_initialized_once) {
		System.out.println("ERROR: Second call to constructor of static parser.  ");
		System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
		System.out.println("       during parser generation.");
		throw new Error();
	}
	jj_initialized_once = true;
	try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	token_source = new JSONTokenManager(jj_input_stream);
	token = new Token();
	jj_ntk = -1;
	jj_gen = 0;
	for (int i = 0; i < 2; i++) jj_la1[i] = -1;
}

/** Reinitialise. */
static public void ReInit(java.io.InputStream stream) {
	ReInit(stream, null);
}
/** Reinitialise. */
static public void ReInit(java.io.InputStream stream, String encoding) {
	try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	token_source.ReInit(jj_input_stream);
	token = new Token();
	jj_ntk = -1;
	jjtree.reset();
	jj_gen = 0;
	for (int i = 0; i < 2; i++) jj_la1[i] = -1;
}

/** Constructor. */
public JSON(java.io.Reader stream) {
	if (jj_initialized_once) {
		System.out.println("ERROR: Second call to constructor of static parser. ");
		System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
		System.out.println("       during parser generation.");
		throw new Error();
	}
	jj_initialized_once = true;
	jj_input_stream = new SimpleCharStream(stream, 1, 1);
	token_source = new JSONTokenManager(jj_input_stream);
	token = new Token();
	jj_ntk = -1;
	jj_gen = 0;
	for (int i = 0; i < 2; i++) jj_la1[i] = -1;
}

/** Reinitialise. */
static public void ReInit(java.io.Reader stream) {
	jj_input_stream.ReInit(stream, 1, 1);
	token_source.ReInit(jj_input_stream);
	token = new Token();
	jj_ntk = -1;
	jjtree.reset();
	jj_gen = 0;
	for (int i = 0; i < 2; i++) jj_la1[i] = -1;
}

/** Constructor with generated Token Manager. */
public JSON(JSONTokenManager tm) {
	if (jj_initialized_once) {
		System.out.println("ERROR: Second call to constructor of static parser. ");
		System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
		System.out.println("       during parser generation.");
		throw new Error();
	}
	jj_initialized_once = true;
	token_source = tm;
	token = new Token();
	jj_ntk = -1;
	jj_gen = 0;
	for (int i = 0; i < 2; i++) jj_la1[i] = -1;
}

/** Reinitialise. */
public void ReInit(JSONTokenManager tm) {
	token_source = tm;
	token = new Token();
	jj_ntk = -1;
	jjtree.reset();
	jj_gen = 0;
	for (int i = 0; i < 2; i++) jj_la1[i] = -1;
}

static private Token jj_consume_token(int kind){
	Token oldToken;

	if ((oldToken = token).next != null)
		token = token.next;

	else
		token = token.next = token_source.getNextToken();

	jj_ntk = -1;

	if (token.kind == kind) {
		jj_gen++;
		input.add(token.toString());
		return token;
	}

	else if(oldToken.kind == kind){//se faltar um token na gramatica, retrocede um para ficar a par e nao desfazado.
		token = oldToken;
		jj_gen++;
		sintaticError = true;
		return token;
	}

	jj_gen++;
	jj_kind = kind;

	printExpectedTokens(oldToken);
	//throw new ParseException();
	sintaticError = true;
	return getToken(kind);
}

/** Get the next Token. */
static final public Token getNextToken() {
	if (token.next != null) token = token.next;
	else token = token.next = token_source.getNextToken();
	jj_ntk = -1;
	jj_gen++;
	return token;
}

/** Get the specific Token. */
static final public Token getToken(int index) {
	Token t = token;
	for (int i = 0; i < index; i++) {
		if (t.next != null) t = t.next;
		else t = t.next = token_source.getNextToken();
	}
	return t;
}

static private int jj_ntk() {
	if ((jj_nt=token.next) == null)
		return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	else
		return (jj_ntk = jj_nt.kind);
}

static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
static private int[] jj_expentry;
static private int jj_kind = -1;

static public void printExpectedTokens(Token tok) {
	jj_expentries.clear();
	boolean[] la1tokens = new boolean[20];
	if (jj_kind >= 0) {
		la1tokens[jj_kind] = true;
		jj_kind = -1;
	}
	for (int i = 0; i < 2; i++) {
		if (jj_la1[i] == jj_gen) {
			for (int j = 0; j < 32; j++) {
				if ((jj_la1_0[i] & (1<<j)) != 0) {
					la1tokens[j] = true;
				}
			}
		}
	}
	for (int i = 0; i < 20; i++) {
		if (la1tokens[i]) {
			jj_expentry = new int[1];
			jj_expentry[0] = i;
			jj_expentries.add(jj_expentry);
		}
	}
	int[][] exptokseq = new int[jj_expentries.size()][];
	for (int i = 0; i < jj_expentries.size(); i++) {
		exptokseq[i] = jj_expentries.get(i);
	}

	System.out.println(printError(tok, exptokseq, tokenImage));
}

/** Generate ParseException. */
static public ParseException generateParseException() {
	jj_expentries.clear();
	boolean[] la1tokens = new boolean[20];
	if (jj_kind >= 0) {
		la1tokens[jj_kind] = true;
		jj_kind = -1;
	}
	for (int i = 0; i < 2; i++) {
		if (jj_la1[i] == jj_gen) {
			for (int j = 0; j < 32; j++) {
				if ((jj_la1_0[i] & (1<<j)) != 0) {
					la1tokens[j] = true;
				}
			}
		}
	}
	for (int i = 0; i < 20; i++) {
		if (la1tokens[i]) {
			jj_expentry = new int[1];
			jj_expentry[0] = i;
			jj_expentries.add(jj_expentry);
		}
	}
	int[][] exptokseq = new int[jj_expentries.size()][];
	for (int i = 0; i < jj_expentries.size(); i++) {
		exptokseq[i] = jj_expentries.get(i);
	}
	return new ParseException(token, exptokseq, tokenImage);
}

/** Enable tracing. */
static final public void enable_tracing() {
}

/** Disable tracing. */
static final public void disable_tracing() {
}

static String printError(Token currentToken, int[][] expectedTokenSequences, String[] tokenImage) {

	String eol = System.getProperty("line.separator", "\n");
	StringBuffer expected = new StringBuffer();
	int maxSize = 0;
	for (int i = 0; i < expectedTokenSequences.length; i++) {
		if (maxSize < expectedTokenSequences[i].length) {
			maxSize = expectedTokenSequences[i].length;
		}
		for (int j = 0; j < expectedTokenSequences[i].length; j++) {
			expected.append(tokenImage[expectedTokenSequences[i][j]]).append(' ');
		}

		expected.append(eol).append("    ");
	}
	String retval = "Encountered \"";
	Token tok = currentToken.next;
	for (int i = 0; i < maxSize; i++) {
		if (i != 0) retval += " ";
		if (tok.kind == 0) {
			retval += tokenImage[0];
			break;
		}
		retval += " " + tokenImage[tok.kind];
		retval += " \"";
		retval += add_escapes(tok.image);
		retval += " \"";
		tok = tok.next;
	}
	retval += "\" at line " + currentToken.next.beginLine + ", column " + currentToken.next.beginColumn;
	retval += "." + eol;
	if (expectedTokenSequences.length == 1) {
		retval += "Was expecting: ";
	} else {
		retval += "Was expecting one of: ";
	}
	retval += expected.toString();
	return retval;
}

static String add_escapes(String str) {
	StringBuffer retval = new StringBuffer();
	char ch;
	for (int i = 0; i < str.length(); i++) {
		switch (str.charAt(i))
		{
		case 0 :
			continue;
		case '\b':
			retval.append("\\b");
			continue;
		case '\t':
			retval.append("\\t");
			continue;
		case '\n':
			retval.append("\\n");
			continue;
		case '\f':
			retval.append("\\f");
			continue;
		case '\r':
			retval.append("\\r");
			continue;
		case '\"':
			retval.append("\\\"");
			continue;
		case '\'':
			retval.append("\\\'");
			continue;
		case '\\':
			retval.append("\\\\");
			continue;
		default:
			if ((ch = str.charAt(i)) < 0x20 || ch > 0x7e) {
				String s = "0000" + Integer.toString(ch, 16);
				retval.append("\\u" + s.substring(s.length() - 4, s.length()));
			} else {
				retval.append(ch);
			}
			continue;
		}
	}
	return retval.toString();
}

}